[package]
name = "crispembed-sys"
# Tracks the C library version in /VERSION. Bump on every C ABI change.
version = "0.3.2"
edition = "2021"
description = "Raw FFI bindings to the crispembed C library"
license = "MIT"
repository = "https://github.com/CrispStrobe/CrispEmbed"
links = "crispembed"
build = "build.rs"

[features]
cuda   = []
metal  = []
vulkan = []
