[package]
name = "crispembed"
# Tracks /VERSION (the C library version) — same as crispembed-sys.
version = "0.3.2"
edition = "2021"
description = "Safe Rust wrapper for crispembed text embedding inference"
license = "MIT"
repository = "https://github.com/CrispStrobe/CrispEmbed"

[features]
cuda   = ["crispembed-sys/cuda"]
metal  = ["crispembed-sys/metal"]
vulkan = ["crispembed-sys/vulkan"]

[dependencies]
crispembed-sys = { path = "../crispembed-sys", version = "0.3.2" }
